fix: global header vertical align

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -61,7 +61,7 @@
     &-trigger {
         height: @layout-header-height;
         line-height: @layout-header-height;
-        // vertical-align: middle;
+        vertical-align: top;
         padding: 0 22px;
         display: inline-block;
         cursor: pointer;
@@ -78,6 +78,7 @@
     &-content {
         height: @layout-header-height;
         line-height: @layout-header-height;
+        vertical-align: top;
         display: inline-block;
     }
 
